# routes/routes.go
@@ -34,7 +34,7 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 		v1.GET("/item/:id/review", controllers.GetReviewByItem)
 
 		user := v1.Use(middleware.JwtAuth())
-		// user.GET("/user/:id/order", controllers.GetOrderByUser)
+		user.GET("/user/:id/order", controllers.GetOrderByUser)
 		user.POST("/order", controllers.InsertOrder)
 		user.PATCH("/order/:id", controllers.UpdateOrder)
 		user.DELETE("/order/:id", controllers.DeleteOrder)
